--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,23 @@
     <artifactId>ReceiptPrinting</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <build>
+    	<finalName>${project.artifactId}</finalName>
+	    <plugins>
+		    <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jar-plugin</artifactId>
+			    <version>3.0.2</version>
+			    <configuration>
+			        <archive>
+			            <manifest>
+			                <mainClass>eu.squadd.receiptprinting.Runner</mainClass>
+			            </manifest>
+			        </archive>
+			    </configuration>
+			</plugin>
+		</plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
